Wrap division in calc to fix warning (#299)

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -181,7 +181,7 @@ $body-color: #1e2128;
 
 $border-radius: $spacer;
 $border-radius-lg: $spacer * 2;
-$border-radius-sm: $spacer / 2;
+$border-radius-sm: calc($spacer / 2);
 
 $border-width: 1px;
 
